# Backend/src/api/openapi.yaml
@@ -1,23 +1,15 @@
-openapi: 3.0.0
+openapi: 3.1.0
+
 info:
-  title: Adressbuch
-  description: "Die Adressbuch-App nutzt einen simplen REST-Webservices zur Kommunikation\
-    \ mit dem Backend. Dieser ermöglicht die üblichen CRUD-Operationen zur Suche,\
-    \ Anzeige, Bearbeitung und Löschung von Adressen, wobei jede Adresse aus einem\
-    \ Vornamen, Nachnamen, Telefonnummer und eine E-Mailadresse besteht."
-  contact:
-    name: Dennis Schulmeister-Zimolong
-    url: https://www.wpvs.de
-    email: dhbw@windows3.de
-  license:
-    name: CC-BY-4.0
-    url: https://creativecommons.org/licenses/by/4.0/deed.de
-  version: "1.0"
+  title: Yogastudio 
+  version: 1.0.0
+  description: "API für die Single-Page-App eines Yogastudios"
+
 servers:
-- url: http://localhost:3000
+- url: http://localhost:3000/api 
 tags:
 - name: Index
-- name: Adresse
+- name: Registration
 paths:
   /:
     get:
@@ -37,14 +29,14 @@ paths:
                   $ref: '#/components/schemas/HATEOAS_Collection'
                 x-content-type: application/json
 
-  /address:
+  /member:
     get:
       tags:
-      - Adresse
-      summary: Adressen suchen
-      description: Suche nach Adressen. Gibt eine Liste aller Adressen passend zu
+      - Registration
+      summary: Anmeldung suchen
+      description: Suche nach Anmeldungen. Gibt eine Liste aller Anmeldungen passend zu
         den übergebenen Suchkriterien zurück.
-      operationId: search-address
+      operationId: search-registration
       parameters:
       - name: first_name
         in: query
@@ -70,9 +62,9 @@ paths:
         explode: true
         schema:
           type: string
-      - name: email
+      - name: memberID
         in: query
-        description: Gesuchte E-Mailadresse
+        description: Gesuchte Mitgliedsnummer
         required: false
         style: form
         explode: true
@@ -86,21 +78,21 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Address'
+                  $ref: '#/components/schemas/Registration'
                 x-content-type: application/json
     post:
       tags:
-      - Adresse
-      summary: Adresse anlegen
-      description: "Neue Adresse anlegen. Speichert die übergebene Adresse in der\
+      - Anmeldung
+      summary: Anmeldung hinzufügen
+      description: "Neue Anmeldung hinzufügen. Speichert die übergebene Anmeldung in der\
         \ Datenbank. Der Wert des Feldes \"_id\" wird dabei ignoriert, da in jedem Fall\
-        \ eine neue Adresse mit neuer ID angelegt wird."
-      operationId: create-address
+        \ eine neue Anmeldung mit neuer ID angelegt wird."
+      operationId: create-registration
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Address'
+              $ref: '#/components/schemas/Registration'
       responses:
         "201":
           description: Created
@@ -111,15 +103,15 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Address'
+                $ref: '#/components/schemas/Registration'
 
   /address/{id}:
     get:
       tags:
-      - Adresse
-      summary: Adresse lesen
-      description: Liest eine einzelne Adresse vom Server.
-      operationId: get-address
+      - Anmeldung
+      summary: Anmeldung lesen
+      description: Liest eine einzelne Anmeldung vom Server.
+      operationId: get-registration
       parameters:
       - name: id
         in: path
@@ -134,17 +126,17 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Address'
+                $ref: '#/components/schemas/Registration'
         "404":
           description: Not Found
     put:
       tags:
-      - Adresse überschreiben
+      - Anmeldung überschreiben
       summary: ""
-      description: "Überschreibt eine vorhandene Adresse auf dem Server. Bis auf die\
+      description: "Überschreibt eine vorhandene Anmeldung auf dem Server. Bis auf die\
         \ ID können alle Felder geändert werden. Der Versuch, die ID zu ändern, wird\
         \ vom Server stillschweigend ignoriert."
-      operationId: update-address
+      operationId: update-registration
       parameters:
       - name: id
         in: path
@@ -157,24 +149,24 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Address'
+              $ref: '#/components/schemas/Registration'
       responses:
         "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Address'
+                $ref: '#/components/schemas/Registration'
         "404":
           description: Not Found
     patch:
       tags:
       - Einzelne Felder ändern
-      summary: Einzelne Adressfelder ändern
-      description: "Ändert einzelne Felder einer vorhandenen Adresse. Zulässig sind\
+      summary: Einzelne Anmeldungsfelder ändern
+      description: "Ändert einzelne Felder einer vorhandenen Anmeldung. Zulässig sind\
         \ alle Felder bis auf die ID, da diese nachträglich nicht mehr verändert werden\
         \ darf."
-      operationId: patch-address
+      operationId: patch-registration
       parameters:
       - name: id
         in: path
@@ -187,22 +179,22 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Address'
+              $ref: '#/components/schemas/Registration'
       responses:
         "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Address'
+                $ref: '#/components/schemas/Registration'
         "404":
           description: Not Found
     delete:
       tags:
-      - Adresse
-      summary: Adresse löschen
-      description: Löscht eine Adresse auf dem Server.
-      operationId: delete-address
+      - Registration
+      summary: Anmeldung löschen
+      description: Löscht eine Anmeldung auf dem Server.
+      operationId: delete-registration
       parameters:
       - name: id
         in: path
@@ -257,7 +249,7 @@ components:
             type: string
 
     Address:
-      title: Adresse
+      title: Registration
       type: object
       properties:
         _links:
@@ -270,9 +262,8 @@ components:
           type: string
         phone:
           type: string
-        email:
+        memberID:
           type: string
-          pattern: "(.*@.*\\..*)?"
       required:
         - first_name
         - last_name
@@ -280,6 +271,6 @@ components:
         _id: "621ff9a936997df5baba746e"
         first_name: "Fox"
         last_name: "Mulder"
-        email: "mulder@xfiles.com"
+        memberID: "5"
         phone: "+49 721 553181"
   securitySchemes: {}
